feat: se actualiza todos los formulario a modales, y se configura para los carrousel y summary images

--- a/landing/templates/conference/carrousel/listado.html
+++ b/landing/templates/conference/carrousel/listado.html
@@ -24,8 +24,8 @@
 
 
     <div class="mb-3">
-        <a href="?action=add&{{ dict_url_vars }}" class="btn btn-success"><i class="fas fa-plus-circle mr-2"></i>
-            Nuevo Sponsor</a>
+        <a onclick="formModal(0, 'Agregar', 'add')" href="javascript:void(0);" class="btn btn-success"><i class="fas fa-plus-circle mr-2"></i>
+            Nuevo Imagen Carrousel</a>
     </div>
 
 
@@ -90,12 +90,14 @@
                                     <div class="dropdown-menu dropdown-menu-right">
 
                                         <a class="dropdown-item" title="Ver {{ modulo }}"
-                                           href="{{ ruta }}?pk={{ l.pk }}&action=ver&{{ dict_url_vars }}">
+                                           onclick="formModal({{ l.pk }}, 'Ver registro: {{ l.name }}', 'ver')"
+                                           href="javascript:void(0);">
                                             <i class="fas fa-eye"></i> Ver
                                         </a>
 
                                         <a class="dropdown-item" title="Editar {{ modulo }}"
-                                           href="{{ ruta }}?pk={{ l.pk }}&action=change&{{ dict_url_vars }}">
+                                           onclick="formModal({{ l.pk }}, 'Editar: {{ l.name }}', 'change')"
+                                           href="javascript:void(0);">
                                             <i class="fas fa-edit"></i> Editar
                                         </a>
 
@@ -122,6 +124,22 @@
                           style="font-size: 15px;">Total de registros: {{ list_count }}</span>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="modalDetalle">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <form method="post" enctype="multipart/form-data" action="{{ ruta }}"
+                      class="form-horizontal form-label-left">
+                    {% csrf_token %}
+                    <div class="modal-header">
+                        <h4 class="modal-title"><b id="modalNombre"></b></h4>
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    </div>
+                    <div class="modal-body detalleProd">
+                    </div>
+                </form>
             </div>
         </div>
     </div>
@@ -169,6 +187,35 @@
                     });
                 }
             })
+        }
+    </script>
+
+    <script>
+        function formModal(id, text, action,) {
+            pantallaespera()
+            $.ajax({
+                type: "GET",
+                url: `{{ request.path }}`,
+                data: {
+                    'action': action,
+                    'id': id,
+                },
+                success: function (data) {
+                    setTimeout($.unblockUI, 1);
+                    if (data.result === true) {
+                        $('#modalNombre').html(text);
+                        $('.detalleProd').html(data.data);
+                        $('#modalDetalle').modal({backdrop: 'static'}).modal('show');
+                    } else {
+                        mensajeWarning(data.message);
+                    }
+                },
+                error: function () {
+                    setTimeout($.unblockUI, 1);
+                    mensajeWarning("Error de conexión.");
+                },
+                dataType: "json"
+            });
         }
     </script>
 {% endblock %}
