--- a/landing/templates/conference/summary/form.html
+++ b/landing/templates/conference/summary/form.html
@@ -1,92 +1,77 @@
-{% extends 'base.html' %}
-{% block atras %}{{ request.path }}{% if summary %}?summary_id={{ summary.pk }}{% endif %}{% endblock %}
-{% block action %}
-
-{% endblock %}
-{% block content %}
-
-    <div class="panel panel-default" data-sortable-id="form-stuff-2">
-
-        <div class="panel-heading ui-sortable-handle">
-            <h4 class="panel-title">{{ titulo }} Formulario</h4>
-            <div class="panel-heading-btn">
-                <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-default" data-click="panel-expand"><i
-                        class="fa fa-expand"></i></a>
-            </div>
-        </div>
-
-        <div class="panel-body">
-
-            <form method="post" enctype="multipart/form-data" action="{{ ruta }}"
-                  class="form-horizontal form-label-left">
-                {% csrf_token %}
-                <input type="hidden" name="pk" value="{{ pk|default:0 }}"/>
-                <input type="hidden" name="action" value="{{ action }}"/>
-                {{ dict_url_vars_input }}
-                {% for field in form %}
-                    {% if field.is_hidden %}
-                        {{ field }}
-                    {% else %}
-                        <div class="form-group">
-                            <label class="form-label" for="id_{{ field.name }}">{{ field.label }}</label>
-                            {{ field }}
-                            <div class="invalid-feedback" id="errorMessage{{ field.name }}"></div>
-                        </div>
-                    {% endif %}
-                {% endfor %}
+<div class="row">
+    <input type="hidden" value="{{ id }}" name="pk">
+    <input type="hidden" name="action" value="{{ action }}"/>
+    {% for field in form %}
+        {% if field.is_hidden %}
+            {{ field }}
+        {% else %}
+            <div class="col-lg-{{ field.field.widget.attrs.col }}">
                 <div class="form-group">
-                    <a class="btn btn-danger" style="color: #ffffff;" href="{{ ruta }}?{{ dict_url_vars_completo }}">
-                        <i class="fa fa-window-close"></i> Cancelar
-                    </a>
-                    <button {% if action != 'ver' %}type="submit" id="submit"{% else %}disabled{% endif %}
-                            class="btn btn-success">
-                        <i class="fa fa-save"></i> Guardar
-                    </button>
+                    <label class="form-label" for="id_{{ field.name }}">{{ field.label }}:</label><br>
+                    {{ field }}
+                    <div class="invalid-feedback" id="errorMessage{{ field.name }}"></div>
                 </div>
-            </form>
-        </div>
+            </div>
+        {% endif %}
+    {% endfor %}
+</div>
 
+<div class="ln_solid"></div>
+
+<div class="form-group">
+    <div class="col-md-12 col-sm-12 col-xs-12 col-md-offset-3 text-right">
+        <a href="javascript:;" class="btn btn-danger" data-dismiss="modal"><i
+                class="fa fa-window-close"></i>
+            Cancelar</a>
+        <button type="submit"
+                class="btn btn-success">
+            <i class="fa fa-save"></i> Guardar
+        </button>
     </div>
+</div>
 
-{% endblock %}
+{{ form.media }}
+<script>
 
-{% block jscript %}
-    {{ form.media }}
-    <script type="text/javascript">
-        $(document).ready(function () {
-            var imagenprincipal = $('#id_image').dropify({
-                messages: {
-                    default: 'Arrastre y suelte un archivo o haga clic aquí.',
-                    replace: 'Arrastre y suelte un archivo o haga clic aquí.',
-                    remove: 'Eliminar',
-                },
-                imgFileExtensions: ["jpg", "jpeg", "png", "tiff", "jfif", "svg"]
-            });
-            var file_example = $('#id_file_example').dropify({
-                messages: {
-                    default: 'Arrastre y suelte un archivo o haga clic aquí.',
-                    replace: 'Arrastre y suelte un archivo o haga clic aquí.',
-                    remove: 'Eliminar',
-                },
-                imgFileExtensions: ["jpg", "jpeg", "png", "tiff", "jfif", "svg"]
-            });
-            $("id_summary").select2("disabled", true);
+    $(document).ready(function () {
+        $.fn.select2.defaults.set('language', 'es');
+        $('select').select2();
+    });
+</script>
+<script type="text/javascript">
+    $(document).ready(function () {
+        var imagenprincipal = $('#id_image').dropify({
+            messages: {
+                default: 'Arrastre y suelte un archivo o haga clic aquí.',
+                replace: 'Arrastre y suelte un archivo o haga clic aquí.',
+                remove: 'Eliminar',
+            },
+            imgFileExtensions: ["jpg", "jpeg", "png", "tiff", "jfif", "svg"]
         });
-    </script>
-    <style>
-        #id_summary[readonly].select2 + .select2-container {
-            pointer-events: none;
-            touch-action: none;
+        var file_example = $('#id_file_example').dropify({
+            messages: {
+                default: 'Arrastre y suelte un archivo o haga clic aquí.',
+                replace: 'Arrastre y suelte un archivo o haga clic aquí.',
+                remove: 'Eliminar',
+            },
+            imgFileExtensions: ["jpg", "jpeg", "png", "tiff", "jfif", "svg"]
+        });
+        $("id_summary").select2("disabled", true);
+    });
+</script>
+<style>
+    #id_summary[readonly].select2 + .select2-container {
+        pointer-events: none;
+        touch-action: none;
 
-            .select2-selection {
-                background: #eee;
-                box-shadow: none;
-            }
-
-            .select2-selection__arrow,
-            .select2-selection__clear {
-                display: none;
-            }
+        .select2-selection {
+            background: #eee;
+            box-shadow: none;
         }
-    </style>
-{% endblock %}
+
+        .select2-selection__arrow,
+        .select2-selection__clear {
+            display: none;
+        }
+    }
+</style>
