--- a/templates/public/landing/landing_copy.html
+++ b/templates/public/landing/landing_copy.html
@@ -649,26 +649,26 @@
                             <div class="col-md-6">
                                 <div id='name_error' class='error'>Please enter your name.</div>
                                 <div>
-                                    <input type='text' name='name' id='name' class="form-control"
+                                    <input required type='text' name='name' id='name' class="form-control"
                                            placeholder="Your Name">
                                 </div>
 
                                 <div id='email_error' class='error'>Please enter your valid E-mail ID.</div>
                                 <div>
-                                    <input type='text' name='email' id='email' class="form-control"
+                                    <input required type='email' name='email' id='email' class="form-control"
                                            placeholder="Your Email">
                                 </div>
 
                                 <div id='phone_error' class='error'>Please enter your phone number.</div>
                                 <div>
-                                    <input type='text' name='phone' id='phone' class="form-control"
+                                    <input required type='text' name='phone' id='phone' class="form-control"
                                            placeholder="Your Phone">
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div id='message_error' class='error'>Please enter your message.</div>
                                 <div>
-                                    <textarea name='message' id='message' class="form-control"
+                                    <textarea required name='message' id='message' class="form-control"
                                               placeholder="Additional Message"></textarea>
                                 </div>
                             </div>
