feat: agregar section view more

--- a/templates/public/landing/landing_copy.html
+++ b/templates/public/landing/landing_copy.html
@@ -118,6 +118,13 @@
                         {#                                        <div class="h6 padding10 pt0 pb0"><i class="i_h3 fa fa-user id-color"></i><span class="text-white">12 Speakers</span></div>#}
                         {#                                        <div class="h6 padding10 pt0 pb0"><i class="i_h3 fa fa-map-marker id-color"></i><span class="text-white">Palo Alto, California</span></div>#}
                     </div>
+                    <div class="d-lg-flex justify-content-center">
+                        <div>
+                            <a class="btn btn-primary rounded" href="#guidelines">
+                                View More
+                            </a>
+                        </div>
+                    </div>
                 </div>
 
                 <div
@@ -437,14 +444,14 @@
                                         </div>
                                         <div class="details text-center mt-2">
                                             <h4>{{ cp.degree }} {{ cp.name }} <a target="_blank" href="
-                                                    
-                                                    
-                                                    
-                                                    
-                                                    
-                                                    
-                                                    
-                                                    
+
+
+
+
+
+
+
+
                                                     {% if cp.linkedin %}{{ cp.linkedin }}{% else %}javascript:void(0){% endif %}"
                                                                                  class="btn btn-primary btn-rounded btn-mini"><i
                                                     class="fa fa-linkedin"></i></a></h4>
@@ -486,14 +493,14 @@
                                             </div>
                                             <div class="details text-center mt-2">
                                                 <h4>{{ c.name }} <a target="_blank" href="
-                                                        
-                                                        
-                                                        
-                                                        
-                                                        
-                                                        
-                                                        
-                                                        
+
+
+
+
+
+
+
+
                                                         {% if c.linkedin %}{{ c.linkedin }}{% else %}javascript:void(0){% endif %}"
                                                                     class="btn btn-primary btn-rounded btn-mini"><i
                                                         class="fa fa-linkedin"></i></a></h4>
