--- a/templates/public/landing/landing.html
+++ b/templates/public/landing/landing.html
@@ -95,11 +95,16 @@
                 >
 
                     <div class="spacer-single"></div>
-                    <div class="d-lg-flex justify-content-center sm-hide">
+                    <div class="d-lg-flex justify-content-center">
                         <div class="h6 padding10 pt0 pb0"><i class="i_h3 fa fa-calendar-check-o id-color"></i><span
-                                class="text-white">March 19th to 21th 2025</span></div>
-                        {#                                        <div class="h6 padding10 pt0 pb0"><i class="i_h3 fa fa-user id-color"></i><span class="text-white">12 Speakers</span></div>#}
-                        {#                                        <div class="h6 padding10 pt0 pb0"><i class="i_h3 fa fa-map-marker id-color"></i><span class="text-white">Palo Alto, California</span></div>#}
+                                class="text-white fs-6 fs-md-4 fs-lg-3">March 19th to 21th 2025</span></div>
+                    </div>
+                    <div class="d-lg-flex justify-content-center">
+                        <div>
+                            <a class="btn btn-primary rounded" href="#guidelines">
+                                View More
+                            </a>
+                        </div>
                     </div>
                 </div>
 
