feat: agregar section view more

--- a/templates/public/landing/landing_copy.html
+++ b/templates/public/landing/landing_copy.html
@@ -110,9 +110,9 @@
                 >
 
                     <div class="spacer-single"></div>
-                    <div class="d-lg-flex justify-content-center sm-hide">
-                        <div class="h6 padding10 pt0 pb0"><i class="i_h3 fa fa-calendar-check-o id-color"></i><span
-                                class="text-white">{% if summary %}
+                    <div class="d-lg-flex justify-content-center !mt-4" style="padding-top: 0.75rem!important">
+                        <div class="h4 padding10"><i class="i_h3 fa fa-calendar-check-o id-color"></i><span
+                                class="text-white" >{% if summary %}
                             {{ summary.get_formatted_date_range }}
                         {% endif %}</span></div>
                         {#                                        <div class="h6 padding10 pt0 pb0"><i class="i_h3 fa fa-user id-color"></i><span class="text-white">12 Speakers</span></div>#}
