--- a/templates/public/landing/landing.html
+++ b/templates/public/landing/landing.html
@@ -95,9 +95,9 @@
                 >
 
                     <div class="spacer-single"></div>
-                    <div class="d-lg-flex justify-content-center">
-                        <div class="h6 padding10 pt0 pb0"><i class="i_h3 fa fa-calendar-check-o id-color"></i><span
-                                class="text-white fs-6 fs-md-4 fs-lg-3">March 19th to 21th 2025</span></div>
+                     <div class="d-lg-flex justify-content-center !mt-4" style="padding-top: 0.75rem!important">
+                        <div class="h4 padding10"><i class="i_h3 fa fa-calendar-check-o id-color"></i><span
+                                class="text-white">March 19th to 21th 2025</span></div>
                     </div>
                     <div class="d-lg-flex justify-content-center">
                         <div>
