reactor: se agregar campo icon al modelo callforpaper

--- a/landing/templates/conference/summary/form_summary.html
+++ b/landing/templates/conference/summary/form_summary.html
@@ -64,6 +64,14 @@
                 remove: 'Eliminar',
             },
             imgFileExtensions: ["jpg", "jpeg", "png", "tiff", "jfif", "svg"]
+        });        
+        var icon = $('#id_icon').dropify({
+            messages: {
+                default: 'Arrastre y suelte un archivo o haga clic aquí.',
+                replace: 'Arrastre y suelte un archivo o haga clic aquí.',
+                remove: 'Eliminar',
+            },
+            imgFileExtensions: ["jpg", "jpeg", "png", "tiff", "jfif", "svg"]
         });
 
         function toggleTextFields() {
