--- a/templates/public/base.html
+++ b/templates/public/base.html
@@ -156,6 +156,10 @@
             border-radius: 50px;
         }
 
+        #mainmenu li a {
+            font-size: 15px;
+        }
+
         #mainmenu li a:after {
             color: #ff8100;
         }
@@ -164,8 +168,6 @@
         #mainmenu li a:hover {
             color: #ff8100;
         }
-
-
 
 
     </style>
