--- a/templates/public/landing/landing_copy.html
+++ b/templates/public/landing/landing_copy.html
@@ -22,7 +22,7 @@
                                  src="/static/images/landing/3d-rendering-dark-earth-space.jpg">
                         {% endif %}
                     </li>
-                    {% empty %}
+                {% empty %}
                     <li data-transition="random-premium" data-slotamount="10" data-masterspeed="200" data-thumb="">
                         <!--  BACKGROUND IMAGE -->
                         <img alt="" class="rev-slidebg" data-bgparallax="0"
@@ -238,7 +238,7 @@
                             {% elif si.status and si.public and si.position == 3 %}
                                 <img class="di-small-2 wow fadeIn" src="{{ si.image.url }}" alt="">
                             {% endif %}
-                            {% empty %}
+                        {% empty %}
                             <img class="di-small wow fadeIn" src="/static/images/landing/6.jpg" alt="">
                             <img class="di-small-2 wow fadeIn" src="/static/images/landing/5.jpg" alt="">
                             <img class="di-big img-fluid wow fadeInRight" data-wow-delay=".25s"
@@ -285,25 +285,67 @@
                         <div id="tab1" class="tab_single_content">
                             <div class="row">
                                 <div class="col-md-12">
-                                    {% for gl in guidelines_by_type %}
-                                        <div class="schedule-listing">
-                                            <div class="schedule-item">
-                                                <div class="sc-info">
-                                                    <h3>{{ gl.name }}</h3>
-                                                    <p>
-                                                    <ul>
-                                                        {% for g in gl.guidelines.all %}
-                                                            {% if g.status and g.public %}
-                                                                <li>{{ g.content }}.</li>
-                                                            {% endif %}
-                                                        {% endfor %}
-                                                    </ul>
-                                                    </p>
-                                                </div>
-                                                <div class="clearfix"></div>
-                                            </div>
-                                        </div>
-                                    {% endfor %}
+                                    <p>The papers must be prepared according to the IET Conference Paper Format. The
+                                        papers must present scientifically sound research that is relevant to the scope
+                                        of the conference, and written in clear, concise English. </p>
+                                    <p>You must adhere to the following guidelines:</p>
+                                    <ul>
+                                        <li><b>Page Formatting:</b> Authors must use the given Manuscript Template to
+                                            prepare the paper.
+                                        </li>
+                                        <li><b>Page Length:</b> The paper should be between <b>4 and 6</b> double-column
+                                            pages. Beyond this length, a charge per additional page will be applied. The
+                                            maximum number of pages allowed is <b>8</b>.
+                                        </li>
+                                        <li><b>Language, Spelling and Grammar:</b>Papers must be written in English.
+                                            Ensure that the paper is spell checked.
+                                        </li>
+                                        <li><b>Originality:</b>Is the work scientifically rigorous, accurate, and novel?
+                                            Does the work contain significant additional material to that already
+                                            published? Has its value been demonstrated?
+                                        </li>
+                                        <li><b>Plagiarism:</b>All conference papers submitted to the IET for publication
+                                            must record original work which has not been published previously. Any
+                                            alleged cases of plagiarism will be dealt with according to the ‘IET Policy
+                                            in Relation to Plagiarism, Infringement of Copyright and Infringement of
+                                            Moral Rights and Submission to Multiple Publications’
+                                        </li>
+                                        <li><b>Multiple submissions:</b> The IET does not permit manuscripts included in
+                                            its conference proceedings to be simultaneously under review for another
+                                            conference or publication. Once a case of multiple submissions has been
+                                            established, the paper/s in question will be immediately declined for
+                                            publication by the IET.
+                                        </li>
+                                        <li><b>Relevance:</b> Is the material appropriate to the scope of the conference
+                                            to which it is submitted?
+                                        </li>
+                                        <li><b>Clarity:</b> Is the English clear and well written? Poorly written
+                                            English may obscure the scientific merit of your paper. Are the ideas
+                                            expressed clearly and concisely? Are the concepts understandable?
+                                        </li>
+                                    </ul>
+                                    <p>For any issues related to the submission process, please, feel free to contact
+                                        us:
+                                        <a href="mailto:{{ confi.email_notificacion }}"></a>{{ confi.email_notificacion }}
+                                    </p>
+                                    <h4>Submission Guidelines</h4>
+                                    <p>All accepted papers from the conference will be published in the IET Conference
+                                        Proceedings. Furthermore, the proceedings will be indexed by <b>IET Inspec, EI
+                                        Compendex and Scopus.</b> All papers must be formatted according to the IET
+                                        Proceedings format.</p>
+                                    <h4>Review Process</h4>
+                                    <ul>
+                                        <li>All submitted papers will be reviewed by at least 2 independent reviewers. Additional reviewers will be consulted if required.</li>
+                                        <li>All papers will go through plagiarism checker. Plagiarism report must not exceed 15%</li>
+                                        <li>All papers must be formatted according to the given template.</li>
+                                        <li>Paper acceptance will be based on originality, significance, technical soundness, and clarity of presentation.</li>
+                                        <li>Authors must make sure that they submit previously unpublished papers to this conference.</li>
+                                    </ul>
+                                    <h4>Awards & Participation</h4>
+                                    <ul>
+                                        <li>All accepted papers that are presented will be awarded a presentation certificate.</li>
+                                        <li>The Best Paper certificate will be awarded to the author(s) of the best paper. The selection will be based on reviewers' comments and recommendations of the session chair.</li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
@@ -313,10 +355,10 @@
                                     <div class="file-info">
                                         {% if cfp.icon %}
                                             <img src="{{ cfp.icon.url }}" class="file-icon"
-                                             alt="{{ cfp.get_type_document_display }} Icon">
+                                                 alt="{{ cfp.get_type_document_display }} Icon">
                                         {% else %}
-                                        <img src="{{ cfp.get_image_by_type_document }}" class="file-icon"
-                                             alt="{{ cfp.get_type_document_display }} Icon">
+                                            <img src="{{ cfp.get_image_by_type_document }}" class="file-icon"
+                                                 alt="{{ cfp.get_type_document_display }} Icon">
                                         {% endif %}
                                         <span>{{ cfp.name }}</span>
                                     </div>
@@ -334,7 +376,7 @@
                                         </a>
                                     {% endif %}
                                 </li>
-                                {% empty %}
+                            {% empty %}
                                 <h1>Comming soon</h1>
                             {% endfor %}
                         </ul>
@@ -458,6 +500,8 @@
 
 
                                                     
+
+
                                                     {% if cp.linkedin %}{{ cp.linkedin }}{% else %}javascript:void(0){% endif %}"
                                                                                  class="btn btn-primary btn-rounded btn-mini"><i
                                                     class="fa fa-linkedin"></i></a></h4>
@@ -508,6 +552,8 @@
 
 
                                                         
+
+
                                                         {% if c.linkedin %}{{ c.linkedin }}{% else %}javascript:void(0){% endif %}"
                                                                     class="btn btn-primary btn-rounded btn-mini"><i
                                                         class="fa fa-linkedin"></i></a></h4>
@@ -588,7 +634,7 @@
                                 {#                                <div class="ps1-deco"></div>#}
                             </div>
                         </div>
-                        
+
                         <div class="col-lg-4 col-md-6 mb-4 d-flex">
                             <div style="background: #101010!important;"
                                  class="pricing-s1 mb30 wow fadeInUp h-100 w-100 d-flex flex-column">
@@ -690,7 +736,7 @@
             </div>
         </div>
     </section>
-    
+
     <section id="section-features">
         <div class="wm wm-border wow fadeInDown ">features</div>
         <div class="container">
