--- a/templates/public/navbar.html
+++ b/templates/public/navbar.html
@@ -5,7 +5,7 @@
                 <!-- logo begin -->
                 <div id="logo">
                     <a href="/">
-                        <img class="logo" src="/static/images/ictiair_logo.png" alt="" style="width:160px;height: 90px">
+                        <img class="logo" src="{{ logo }}" alt="" style="width:160px;height: 40px">
                     </a>
                 </div>
                 <!-- logo close -->
