--- a/templates/public/landing/landing_copy.html
+++ b/templates/public/landing/landing_copy.html
@@ -328,7 +328,7 @@
                                         us:
                                         <a href="mailto:{{ confi.email_notificacion }}"></a>{{ confi.email_notificacion }}
                                     </p>
-                                    <h4>Submission Guidelines</h4>
+                                    <h4>Proceeding Publication</h4>
                                     <p>All accepted papers from the conference will be published in the IET Conference
                                         Proceedings. Furthermore, the proceedings will be indexed by <b>IET Inspec, EI
                                         Compendex and Scopus.</b> All papers must be formatted according to the IET
