--- a/static/exhibiz/css/style.css
+++ b/static/exhibiz/css/style.css
@@ -172,7 +172,8 @@ overflow:visible;
 	}
 	
 	header.transparent{
-	background:rgba(0,0,0,0.0);
+	/*background:rgba(0,0,0,0.0);*/
+		background: rgb(14 14 14);
 	}
 	
 	header.autoshow{
