--- a/templates/public/base.html
+++ b/templates/public/base.html
@@ -24,7 +24,7 @@
     <link href="/static/exhibiz/css/bootstrap-grid.min.css" rel="stylesheet" type="text/css" id="bootstrap-grid">
     <link href="/static/exhibiz/css/bootstrap-reboot.min.css" rel="stylesheet" type="text/css" id="bootstrap-reboot">
     <link href="/static/exhibiz/css/plugins.css" rel="stylesheet" type="text/css">
-    <link href="/static/exhibiz/css/style.css" rel="stylesheet" type="text/css">
+    <link href="/static/exhibiz/css/style.css?1" rel="stylesheet" type="text/css">
     <link href="/static/exhibiz/css/rev-settings.css" rel="stylesheet" type="text/css">
     <link href="/static/exhibiz/css/color.css?1" rel="stylesheet" type="text/css">
 
