--- a/templates/public/landing/landing_copy.html
+++ b/templates/public/landing/landing_copy.html
@@ -326,7 +326,7 @@
                                     </ul>
                                     <p>For any issues related to the submission process, please, feel free to contact
                                         us:
-                                        <a href="mailto:{{ confi.email_notificacion }}"></a>{{ confi.email_notificacion }}
+                                        <a class="btn-link" href="mailto:{{ email_notificacion }}">{{ email_notificacion }}</a>
                                     </p>
                                     <h4>Proceeding Publication</h4>
                                     <p>All accepted papers from the conference will be published in the IET Conference
