--- a/templates/public/landing/landing_copy.html
+++ b/templates/public/landing/landing_copy.html
@@ -349,7 +349,7 @@
                                 </div>
                             </div>
                         </div>
-                        <ul class="list-group list-group-flush">
+                        <ul class="list-group list-group-flush" id="callforpapers">
                             {% for cfp in call_for_papers %}
                                 <li class="list-group-item d-flex justify-content-between align-items-center">
                                     <div class="file-info">
