--- a/templates/public/navbar.html
+++ b/templates/public/navbar.html
@@ -44,13 +44,13 @@
 
                     <li><a href="{% if request.path == '/' %}/#section-speakers{% else %}/{% endif %}">Committees<span></span></a>
                         <ul>
-                            <li>
-                                <a href="{% if request.path == '/' %}/#speakers{% else %}/{% endif %}">Speakers</a>
-                            </li>
-                            <li><a href="{% if request.path == '/' %}/#org_comite{% else %}/{% endif %}">Organizing
+{#                            <li>#}
+{#                                <a href="{% if request.path == '/' %}/#speakers{% else %}/{% endif %}">Speakers</a>#}
+{#                            </li>#}
+                            <li><a href="{% if request.path == '/' %}/#section-speakers{% else %}/{% endif %}">Organizing
                                 Committee</a></li>
-                            <li><a href="{% if request.path == '/' %}/#gen_chairs{% else %}/{% endif %}">General
-                                Chairs</a></li>
+{#                            <li><a href="{% if request.path == '/' %}/#gen_chairs{% else %}/{% endif %}">General#}
+{#                                Chairs</a></li>#}
                         </ul>
                     </li>
 
