--- a/templates/public/navbar.html
+++ b/templates/public/navbar.html
@@ -18,7 +18,7 @@
                     <li><a href="/">Home<span></span></a></li>
 
                     <li>
-                        <a href="{% if request.path == '/' %}/#section-hero{% else %}/{% endif %}">Sponsors<span></span></a>
+                        <a href="{% if request.path == '/' %}/#section-sponsors{% else %}/{% endif %}">Sponsors<span></span></a>
                     </li>
 
                     <li>
