--- a/templates/public/footer.html
+++ b/templates/public/footer.html
@@ -31,7 +31,7 @@
 
             <div class="col-md-6 text-center">
                 &copy; Copyright 2024 - ICTIAIR - Event Conference Website <br>
-                The <a href="https://cmt3.research.microsoft.com" class="btn-link" target="_blank">Microsoft CMT service</a> was used for managing the
+                The <a href="https://cmt3.research.microsoft.com" class="btn-link text-primary" target="_blank">Microsoft CMT service</a> was used for managing the
                 peer-reviewing process for this conference. This service was provided for free by Microsoft and they
                 bore all expenses, including costs for Azure cloud services as well as for software development and
                 support.
